# suryasiddhantapanchanga

./: README.md  panchanga.code-workspace
panchanga/: Dockerfile  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
panchanga-web/: .env.local  README.md  env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
panchanga-web/.next/: trace
panchanga-web/.next/cache/: .tsbuildinfo  config.json
panchanga-web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
panchanga-web/.next/server/app/: page.js  page_client-reference-manifest.js
panchanga-web/.next/server/vendor-chunks/: @swc.js  next.js
panchanga-web/.next/static/chunks/: app-pages-internals.js  webpack.js
panchanga-web/.next/types/app/: layout.ts  (+1 more)
panchanga-web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
panchanga-web/src/lib/: cities.ts  rasi.ts  types.ts
panchanga/.vercel/: project.json
panchanga/api/: __init__.py  dependencies.py  main.py
panchanga/api/routes/: __init__.py  birthdays.py  debug.py  health.py  panchanga.py  rules.py  slots.py
panchanga/debug/: check_ephemeris.py  console_debug.py  console_drik_debug.py  debug_server.py  demo_sunrise_calculation.py  demo_two_methods.py  desantara.py  final-full-panchanga-1.py  panchanga-1.py  perigee_apogee.py  test_drik.py  test_fixes.py  test_import.py  test_karana_refactor.py  test_sunrise_fraction.py  tithi_transitions.py
panchanga/docs/: BCE_DATE_REFERENCE.md  CONSOLE_DRIK_DEBUG_README.md  DRIK_DEBUG_GUIDE.md  DRIK_FIXES_SUMMARY.md  DRIK_INTEGRATION.md  EPHEMERIS_FILES_EXPLAINED.md  EPOCH_VS_SUNRISE_EXPLAINED.md  FIX_DRIK_SUNRISE_ISSUE.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  KALI_EPOCH_EXAMPLE.md  KARANA_REFACTORING.md  LICENSING_IMPORTANT.md  MIDNIGHT_VS_SUNRISE_METHODS.md  QUICK_REFERENCE.md  SUNRISE_FRACTION_FLOW.md  TITHI_CALCULATION_EXPLAINED.md  TWO_METHODS_SUMMARY.md  USAGE_EXAMPLE.md  VENV_FIX_SUMMARY.md
panchanga/eph_data/: .gitignore  README.md
panchanga/panchanga/: __init__.py
panchanga/panchanga/core/: __init__.py  astronomical.py  calculator.py  constants.py  date_utils.py  debug_context.py  drik_ephemeris.py  math_utils.py
panchanga/panchanga/data/: __init__.py  names.py  planetary.py
panchanga/panchanga/models/: __init__.py  requests.py  responses.py  settings.py
panchanga/panchanga/rules/: __init__.py  base.py  engine.py  tithi_rules.py
panchanga/panchanga/rules/config/: __init__.py  default.yaml  schema.py
panchanga/panchanga/rules/traditions/: __init__.py  base.py  drik.py  lunar.py  surya.py
panchanga/panchanga/services/: __init__.py  panchanga_service.py
(+22 files in other folders)
